--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -58,13 +58,13 @@
     <app-loader *ngIf="signingUp"></app-loader>
 
     <div class="signup-container  margin-ts">
-      <div class="bordered bg-white padding-s full-width margin-rs segment signup-form ">
+      <div class="bg-white padding-s full-width margin-rs segment signup-form ">
         <div class="signup-title">
           <p>Create your personal account</p>
         </div>
         <app-register-form></app-register-form>
       </div>
-      <div class="bordered bg-white signup-benefits">
+      <div class="bg-white signup-benefits">
         <div class="padding-s  bordered-b benefits-title">
           <p>Why AccountPlus?</p>
         </div>
