--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -2,6 +2,11 @@
   <app-header></app-header>
 </div>
 <div class="content" #content>
+  <div class="row">
+    <div class="col">
+      <app-piechart></app-piechart>
+    </div>
+  </div>
   <div class="row" >
     <div class="col" *ngFor="let graph of graphs">
       <app-bargraph [graph]="graph"></app-bargraph>
