Partly working pieChart on canvas

--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -58,7 +58,7 @@
     <app-loader *ngIf="signingUp"></app-loader>
 
     <div class="signup-container  margin-ts">
-      <div class="bg-white padding-s full-width margin-rs segment signup-form ">
+      <div class="bordered bg-white padding-s full-width margin-rs segment signup-form ">
         <div class="signup-title">
           <p>Create your personal account</p>
         </div>
