Use modular base chart for custom graphs

--- a/src/app/modules/auth/pages/register/register.component.scss
+++ b/src/app/modules/auth/pages/register/register.component.scss
@@ -27,7 +27,7 @@
 
     .steps {
       .step:not(:last-child) {
-        border-right: 1px solid #DADADA;
+        border-right: 1px solid #f2f5ed;
       }
 
       .step {
