--- a/src/styles.scss
+++ b/src/styles.scss
@@ -491,7 +491,7 @@ li {
   position: relative;
   margin-top: 70px;
   height: 100vh;
-  background: #fffdf0;
+  background: #f5f6f7;
   background-size: cover;
 }
 .full-width {
