--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -4,7 +4,7 @@
 <div class="content" #content>
   <div class="row">
     <div class="col">
-      <app-piechart></app-piechart>
+      <app-piechart [chart]="pieChart"></app-piechart>
     </div>
   </div>
   <div class="row" >
