--- a/src/app/modules/graphs/components/piechart/piechart.component.html
+++ b/src/app/modules/graphs/components/piechart/piechart.component.html
@@ -1,1 +1,13 @@
-<canvas #canvas></canvas>
+<div style="height: 400px">
+  <div class="row">
+    <div class="col">
+      <p>{{graph.title}}</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <canvas class="raised centered padding-s margin-s"#canvas></canvas>
+    </div>
+  </div>
+
+</div>
