--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -5,8 +5,8 @@
         Register
         <fa name="user" class="padding"></fa>
       </a>
-      <div class="centered padding option">
-        Profile
+      <div class="centered padding option" routerLink="/auth/login">
+        Log In
         <fa name="user" class="padding"></fa>
       </div>
       <div class="centered padding option">
