--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,3 +1,7 @@
-<p>
-  login works!
-</p>
+<div class="raised top-header">
+  <app-header></app-header>
+</div>
+
+<div class="centered-h content">
+  <p>Login Here</p>
+</div>
