--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -5,7 +5,7 @@
 <div class="centered-h content">
   <div class="padding-s main-body">
 
-    <div class="headline">
+    <div class="headline color-white">
       <div class="headline-title">
         <p>Join AccountPlus</p>
       </div>
