--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -4,18 +4,20 @@
 
 <div class="centered-h content">
   <div class="segment centered">
-    <div class="bg-white margin-s padding-s bordered login">
-      <div class="centered padding-s bordered login-header">
-        <h2 class="no-margin">AccountPlus</h2>
-      </div>
-      <div class="centered padding login-title">
-        <p class="bold-800 color-p">Sign In</p>
-      </div>
-      <div class="centered login-intro">
-        <p>to your account</p>
-      </div>
-      <div class="login-form">
-        <app-login-form></app-login-form>
+    <div class="bg-white margin-s padding-s login">
+      <div class="bordered-b shaded full-height">
+        <div class="centered padding-s login-header">
+          <h2 class="no-margin">AccountPlus</h2>
+        </div>
+        <div class="centered padding login-title">
+          <p class="bold-800 color-p">Sign In</p>
+        </div>
+        <div class="centered login-intro">
+          <p>to your account</p>
+        </div>
+        <div class="login-form">
+          <app-login-form></app-login-form>
+        </div>
       </div>
     </div>
   </div>
