--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -58,17 +58,17 @@
     <app-loader *ngIf="signingUp"></app-loader>
 
     <div class="margin-ts height-transition signup-container">
-      <div class="bordered bg-white padding-s full-width margin-rs segment shaded signup-form ">
+      <div class="bordered bg-white padding-s full-width margin-rs segment signup-form ">
         <div class="signup-title">
           <p>Create your personal account</p>
         </div>
         <app-register-form></app-register-form>
       </div>
       <div class="bg-white signup-benefits">
-        <div class="padding-s  bordered-b benefits-title">
+        <div class="padding-s bordered-b benefits-title">
           <p>Why AccountPlus?</p>
         </div>
-        <div class="benefit-items">
+        <div class="full-height benefit-items">
           <ul>
             <li>
               <p><b>Unlimited</b> accounts</p>
