--- a/src/app/modules/shared/components/button/button.component.html
+++ b/src/app/modules/shared/components/button/button.component.html
@@ -1,14 +1,29 @@
-<button
+<button *ngIf="fullWidth"
   class="button"
+  [ngClass]="{
+    'disabled': disabled,
+    'full-width': fullWidth
+  }"
   [ngStyle]="{
-    'width.px': width,
-    'height.px': height,
     'background-color': background,
     'color': color,
     'font-size.px': fontSize
   }"
+  [disabled]="disabled"
+  >
+  {{ text }}
+</button>
+<button *ngIf="!fullWidth"
+  class="button"
   [ngClass]="{
     'disabled': disabled
+  }"
+  [ngStyle]="{
+    'background-color': background,
+    'color': color,
+    'font-size.px': fontSize,
+    'width.px': width,
+    'height.px': height
   }"
   [disabled]="disabled"
   >
