--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -4,10 +4,10 @@
 
 <div class="centered-h content">
   <div class="segment centered">
-    <div class="bg-white margin-s padding-s login">
-      <div class="bordered-b shaded full-height">
-        <div class="centered padding-s login-header">
-          <h2 class="no-margin">AccountPlus</h2>
+    <div class="bg-white margin-s padding-s relative login">
+      <div class="bordered-b shaded">
+        <div class="centered login-header">
+          <h3>AccountPlus</h3>
         </div>
         <div class="centered padding login-title">
           <p class="bold-800 color-p">Sign In</p>
@@ -18,6 +18,11 @@
         <div class="login-form">
           <app-login-form></app-login-form>
         </div>
+      </div>
+
+      <div class="absolute-bottom padding-bs">
+        <a href="" class="info link ">Forgot Password?</a>
+        <a href="" class="info link float-right">Create an account</a>
       </div>
     </div>
   </div>
