--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,6 +121,30 @@ li {
 .padding {
   padding: 8px;
 }
+.padding-b {
+  padding-bottom: 8px;
+}
+.padding-t {
+  padding-top: 8px;
+}
+.padding-l {
+  padding-left: 8px;
+}
+.padding-r {
+  padding-right: 8px;
+}
+.padding-bs {
+  padding-bottom: 16px;
+}
+.padding-ts {
+  padding-top: 16px;
+}
+.padding-ls {
+  padding-left: 16px;
+}
+.padding-rs {
+  padding-right: 16px;
+}
 .padding-h {
   padding: 8px 0;
 }
@@ -197,9 +221,10 @@ li {
 .content {
   position: relative;
   margin-top: 70px;
-  height: 100vh;
-  //background: url("assets/backgrounds/mountain+range.png");
-  background: url("assets/backgrounds/laptop-money-manage.jpg");
+  height:95vh;
+  background: url("assets/backgrounds/mountain+range.png");
+  //background: url("assets/backgrounds/laptop-money-manage.jpg");
+  //background: url("https://images.unsplash.com/photo-1515847049296-a281d6401047?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -260,6 +285,11 @@ li {
 }
 .relative {
   position: relative;
+}
+
+.absolute-bottom {
+  position: absolute;
+  bottom:  0;
 }
 
 .height-transition {
