--- a/src/app/modules/graphs/components/piechart/piechart.component.html
+++ b/src/app/modules/graphs/components/piechart/piechart.component.html
@@ -1,20 +1,22 @@
-<div class="raised padding-s margin-s pie-chart" [ngStyle]="{'width.px' : chart.width + 300}">
-  <div class="padding">
-    <p class="centered padding">{{chart.title}}</p>
-    <canvas class="centered" #canvas></canvas>
-  </div>
-  <div class="keys">
-    <div *ngFor="let pie of chart.pies" class="full-width padding key">
-      <div class="padding-s color"
-           [ngStyle]="{
+<div class="raised padding-s margin-s" [ngStyle]="{'width.px' : chart.width + 400}">
+  <p class="centered bold padding">{{chart.title}}</p>
+  <div class="pie-chart">
+    <div class="padding">
+      <canvas class="centered" #canvas></canvas>
+    </div>
+    <div class="keys">
+      <div *ngFor="let pie of chart.pies" class="full-width padding relative key">
+        <div class="centered padding-s raised color"
+             [ngStyle]="{
         'background-color': pie.color
        }">
-      </div>
-      <div class="padding-s color-title">
-        {{ pie.title }}
-      </div>
-      <div class="centered key-value">
-        {{ pie.value }} {{ chart.unit }}
+        </div>
+        <div class="padding-s color-title">
+          {{ pie.title }}
+        </div>
+        <div class="full-width centered key-value">
+          <p class="full-height bold centered-l">{{ chart.unit }}  {{ pie.value | number : '1.2-2'}} - {{ pie.percentage | number : '1.2-2' }} %</p>
+        </div>
       </div>
     </div>
   </div>
