--- a/src/app/modules/graphs/components/piechart/piechart.component.html
+++ b/src/app/modules/graphs/components/piechart/piechart.component.html
@@ -1,5 +1,6 @@
 <div class="raised padding-s margin-s" [ngStyle]="{'width.px' : chart.width + 400}">
   <p class="centered bold padding">{{chart.title}}</p>
+  <p class="centered info color-grey">{{chart.subtitle }}</p>
   <div class="pie-chart">
     <div class="padding">
       <canvas class="centered" #canvas></canvas>
