--- a/src/styles.scss
+++ b/src/styles.scss
@@ -204,19 +204,19 @@ li {
 // Custom borders
 
 .bordered {
-  border: 1px solid #90bfbc;
+  border: 1px solid #DADADA;
 }
 .bordered-t {
-  border-top: 1px solid #90bfbc;
+  border-top: 1px solid #DADADA;
 }
 .bordered-r {
-  border-right: 1px solid #90bfbc;
+  border-right: 1px solid #DADADA;
 }
 .bordered-b {
-  border-bottom: 1px solid #90bfbc;
+  border-bottom: 1px solid #DADADA;
 }
 .bordered-l {
-  border-left: 1px solid #90bfbc;
+  border-left: 1px solid #DADADA;
 }
 .circular {
   border-radius: 50%;
@@ -309,4 +309,10 @@ li {
   -moz-transition: height 500ms ease-out 1s;
   -o-transition: height 500ms ease-out 1s;
   transition: height 500ms ease-out 1s;
+}
+.text-right {
+  text-align: right;
+}
+.text-left {
+  text-align: left;
 }
