Dynamic reusable graph

--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -7,7 +7,7 @@
       <app-piechart [chart]="pieChart"></app-piechart>
     </div>
     <div class="col">
-      <app-linechart></app-linechart>
+      <app-linechart [graph]="lineChart"></app-linechart>
     </div>
   </div>
   <div class="row" >
