Consistent segments for graphs

--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -4,7 +4,7 @@
 
 <div class="centered-h content">
   <div class="segment centered">
-    <div class="bg-white margin-s padding-s relative login">
+    <div class="bg-white margin-s padding-s relative login chart">
       <div class="bordered-b shaded">
         <div class="centered login-header">
           <h3>AccountPlus</h3>
