--- a/src/app/modules/graphs/components/linechart/linechart.component.html
+++ b/src/app/modules/graphs/components/linechart/linechart.component.html
@@ -1,3 +1,9 @@
-<div class="raised margin-s">
-  <canvas class="centered" #canvas></canvas>
+<div class="margin-s bordered rounded-s chart">
+  <div class="padding-s margin-bs">
+    <p class="centered bold padding">{{graph.title}}</p>
+    <p class="centered info color-grey">{{graph.subtitle }}</p>
+  </div>
+  <div class="padding-s margin-s">
+    <canvas class="centered" #canvas></canvas>
+  </div>
 </div>
