Reusable line graph closes #8

--- a/src/app/modules/graphs/components/linechart/linechart.component.html
+++ b/src/app/modules/graphs/components/linechart/linechart.component.html
@@ -3,7 +3,8 @@
     <p class="centered bold padding">{{graph.title}}</p>
     <p class="centered info color-grey">{{graph.subtitle }}</p>
   </div>
-  <div class="padding-s margin-s">
+  <div>
     <canvas class="centered" #canvas></canvas>
   </div>
 </div>
+g
