--- a/src/styles.scss
+++ b/src/styles.scss
@@ -234,9 +234,9 @@ li {
   position: relative;
   margin-top: 70px;
   height:95vh;
-  background: url("assets/backgrounds/mountain+range.png");
+  //background: url("assets/backgrounds/mountain+range.png");
   //background: url("assets/backgrounds/laptop-money-manage.jpg");
-  //background: url("https://images.unsplash.com/photo-1515847049296-a281d6401047?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+  background: url("https://images.pexels.com/photos/952670/pexels-photo-952670.jpeg?cs=srgb&dl=background-black-colors-952670.jpg&fm=jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
