Image in registration form

--- a/src/app/modules/auth/pages/register/register.component.html
+++ b/src/app/modules/auth/pages/register/register.component.html
@@ -5,7 +5,7 @@
 <div class="centered-h content">
   <div class="padding-s main-body">
 
-    <div class="headline color-white">
+    <div class="headline">
       <div class="headline-title">
         <p>Join AccountPlus</p>
       </div>
@@ -58,7 +58,7 @@
     <app-loader *ngIf="signingUp"></app-loader>
 
     <div class="margin-ts height-transition signup-container">
-      <div class="bordered bg-white padding-s full-width margin-rs segment signup-form ">
+      <div class="bg-white padding-s full-width margin-rs segment signup-form ">
         <div class="signup-title">
           <p>Create your personal account</p>
         </div>
