--- a/src/app/modules/auth/pages/register/register.component.scss
+++ b/src/app/modules/auth/pages/register/register.component.scss
@@ -60,13 +60,21 @@
 
     .signup-container {
       display: flex;
-      .signup-title {
-        p {
-          font-size: 24px;
-          line-height: 36px;
-          font-weight: 300;
+      .signup-form {
+        background: url("../../../../../assets/backgrounds/couch-bg.jpg");
+        background-position: center;
+        background-size: cover;
+        height: 568px;
+
+        .signup-title {
+          p {
+            font-size: 24px;
+            line-height: 36px;
+            font-weight: 300;
+          }
         }
       }
+
 
       .signup-benefits {
         width: 500px;
