--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@ input {
   border: none;
   border-bottom: 2px solid #90bfbc;
   min-height: 40px;
-  background: white;
+  background: white !important;
   padding: 2px 10px;
   font-size: 16px;
   max-width: 400px;
@@ -20,7 +20,7 @@ input {
 input:focus {
   border: none;
   border-bottom-color: #90bfbc;
-  background: white;
+  background: white !important;
   box-shadow: none;
 }
 li {
@@ -234,9 +234,10 @@ li {
   position: relative;
   margin-top: 70px;
   height:95vh;
+  background: #f5f5f5;
   //background: url("assets/backgrounds/mountain+range.png");
   //background: url("assets/backgrounds/laptop-money-manage.jpg");
-  background: url("https://images.pexels.com/photos/952670/pexels-photo-952670.jpeg?cs=srgb&dl=background-black-colors-952670.jpg&fm=jpg");
+  //background: url("https://images.pexels.com/photos/952670/pexels-photo-952670.jpeg?cs=srgb&dl=background-black-colors-952670.jpg&fm=jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
