Enhancement to graphs

--- a/src/app/modules/graphs/components/bargraph/bargraph.component.html
+++ b/src/app/modules/graphs/components/bargraph/bargraph.component.html
@@ -12,7 +12,7 @@
   <div class="graph-container">
     <div class="row">
       <div class="col">
-        <canvas class="segment centered" #canvas></canvas>
+        <canvas class="segment centered" #canvas2></canvas>
       </div>
     </div>
     <div class="row">
