Use global configuration for line chart

--- a/src/app/modules/graphs/components/linechart/linechart.component.html
+++ b/src/app/modules/graphs/components/linechart/linechart.component.html
@@ -1,4 +1,4 @@
-<div class="margin-s bordered rounded-s chart">
+<div class="margin-s bordered rounded-s chart" [ngStyle]="{'background-color': graph.backgroundColor}">
   <div class="padding-s margin-bs">
     <p class="centered bold padding">{{graph.title}}</p>
     <p class="centered info color-grey">{{graph.subtitle }}</p>
