Settable max in lineChart

--- a/src/app/modules/graphs/components/bargraph/bargraph.component.html
+++ b/src/app/modules/graphs/components/bargraph/bargraph.component.html
@@ -1,4 +1,4 @@
-<div class="margin-s padding bordered rounded-s chart">
+<div class="margin-s padding bordered rounded-s chart" [ngStyle]="{'background-color': graph.backgroundColor}">
   <div class="row">
     <div class="centered col">
       <p class="margin title color-p">{{graph.title}}</p>
