--- a/src/app/modules/graphs/components/piechart/piechart.component.html
+++ b/src/app/modules/graphs/components/piechart/piechart.component.html
@@ -1,4 +1,4 @@
-<div class="padding-s margin-s bordered rounded-s chart" [ngStyle]="{'width.px' : chart.width + 400}">
+<div class="padding-s margin-s bordered rounded-s chart" [ngStyle]="{'background-color': chart.backgroundColor,'width.px': chart.width + 400}">
   <div class="padding-s margin-bs">
     <p class="centered bold padding">{{chart.title}}</p>
     <p class="centered info color-grey">{{chart.subtitle }}</p>
