--- a/src/app/modules/charts/components/linechart/linechart.component.html
+++ b/src/app/modules/charts/components/linechart/linechart.component.html
@@ -1,7 +1,7 @@
-<div class="margin-s bordered rounded-s chart" [ngStyle]="{'background-color': graph.backgroundColor}">
+<div class="margin-s bordered rounded-s chart" [ngStyle]="{'background-color': chart.backgroundColor}">
   <div class="padding-s margin-bs">
-    <p class="centered bold padding">{{graph.title}}</p>
-    <p class="centered info color-grey">{{graph.subtitle }}</p>
+    <p class="centered bold padding">{{chart.title}}</p>
+    <p class="centered info color-grey">{{chart.subtitle }}</p>
   </div>
   <div>
     <canvas class="centered" #canvas></canvas>
