--- a/src/app/modules/charts/components/linechart/linechart.component.html
+++ b/src/app/modules/charts/components/linechart/linechart.component.html
@@ -1,9 +1,9 @@
-<div class="margin-s bordered rounded-s chart" [ngStyle]="{'background-color': chart.backgroundColor}">
+<div class="margin-s bordered rounded-s raised chart" [ngStyle]="{'background-color': chart.backgroundColor}">
   <div class="padding-s margin-bs">
     <p class="centered bold padding">{{chart.title}}</p>
     <p class="centered info color-grey">{{chart.subtitle }}</p>
   </div>
   <div>
-    <canvas class="centered" #canvas></canvas>
+    <canvas class="centered padding-s" #canvas></canvas>
   </div>
 </div>
